EntityGraph - load comments with cities